--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <mat-toolbar color="primary">
   <span>Magic DeckBuilder</span>
+
+  <span class="toobarFill"></span>
+
+  
+  <button mat-flat-button color="primary" routerLink="/deck-list">Deck List</button>
+  <button mat-flat-button color="primary" routerLink="/card-search">Card Search</button>
 </mat-toolbar>
 <br />
 
