--- a/src/app/components/card-search/card-search.component.html
+++ b/src/app/components/card-search/card-search.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="cards">
-    <mat-card *ngFor="let card of cards">
+    <mat-card *ngFor="let card of cards" class="animated fadeIn">
       <img mat-card-image src="{{ card.imageUrl }}" alt="{{ card.name }}">
     </mat-card>
   </div>
